[package]
name = "cooklang-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.5.0"
camino = "1.1.6"
diesel = { version = "2.1.4", features = ["sqlite", "time"] }
digest = "0.10.7"
futures = "0.3.30"
notify = "6.1.1"
notify-debouncer-full = "0.3.1"
rusqlite = { version = "0.30.0", features = ["bundled"] }
time = { version = "0.3.31", features = ["std"] }
tokio = { version = "1.35.1", features = ["time", "full"] }
