[package]
name = "cooklang-sync-server"
version = "0.2.3"
authors = ["Alexey Dubovskoy <alexey@cooklang.org>"]
edition = "2021"
description = "A server library for cooklang-sync"
license = "MPL-2.0"
repository = "https://github.com/cooklang/cooklang-sync"
keywords = ["file-sync", "sync"]

[[bin]]
path = "src/main.rs"
name = "server"


[dependencies]
rocket = { version = "0.5", features = ["json", "secrets"] }
rocket_sync_db_pools = { version = "0.1", optional = true }
diesel = { version = "2", default-features = false, optional = true, features = ["r2d2"] }
diesel_migrations = "2"
rusqlite = { version = "0.37", optional = true, features = ["bundled"] }
async-notify = "0.3"
tokio = { version = "1.48", features = ["time"] }
multer = "3"
tokio-util = "0.7"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mime = "0.3"
futures-core = "0.3"
rocket-multipart = "0.2"

[dev-dependencies]
mockall = "0.13"
tokio-test = "0.4"
proptest = "1.9"
rocket = { version = "0.5", features = ["json", "secrets"] }

[features]
default = ["database_sqlite"]

database_sqlite = [
  "diesel/sqlite",
  "diesel/returning_clauses_for_sqlite_3_35",
  "rusqlite/bundled",
  "rocket_sync_db_pools/diesel_sqlite_pool"
]
database_postgres = [
  "diesel/postgres",
  "rocket_sync_db_pools/diesel_postgres_pool"
]
